--- a/app/src/main/res/layout/card_now_playing.xml
+++ b/app/src/main/res/layout/card_now_playing.xml
@@ -4,18 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cons_card_nowplaying"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#000000"
+    android:elevation="16dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_card_nowplaying"
-        android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:cardCornerRadius="12dp"
-        app:cardElevation="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
+        android:background="#805E5E5E"
+        app:cardBackgroundColor="#805E5E5E"
+        app:cardCornerRadius="36dp"
+        app:cardElevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,51 +30,30 @@
 
             <ImageView
                 android:id="@+id/img_poster_card_nowplaying"
-                android:layout_width="96dp"
-                android:layout_height="112dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_width="320dp"
+                android:layout_height="wrap_content"
                 android:contentDescription="@string/img"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@android:drawable/ic_menu_report_image" />
 
             <TextView
-                android:id="@+id/lbl_title_card_nowplaying"
+                android:id="@+id/lbl_title_card_now_playing"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:maxLines="1"
-                android:text="TextView"
-                android:textColor="@android:color/black"
-                android:textSize="16sp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:text="@string/null_text"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/img_poster_card_nowplaying"
-                app:layout_constraintTop_toTopOf="@+id/img_poster_card_nowplaying" />
-
-            <TextView
-                android:id="@+id/lbl_overview_card_nowplaying"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:maxLines="2"
-                android:text="@string/subtitle"
-                android:textColor="@color/gold"
-                app:layout_constraintEnd_toEndOf="@+id/lbl_title_card_nowplaying"
-                app:layout_constraintStart_toStartOf="@+id/lbl_title_card_nowplaying"
-                app:layout_constraintTop_toBottomOf="@+id/lbl_title_card_nowplaying" />
-
-            <TextView
-                android:id="@+id/lbl_releasedate_card_nowplaying"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
-                android:text="TextView"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/lbl_overview_card_nowplaying"
-                app:layout_constraintStart_toStartOf="@+id/lbl_overview_card_nowplaying" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/img_poster_card_nowplaying" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
