--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -30,7 +30,7 @@
         android:layout_marginBottom="8dp"
         android:indeterminateTint="@android:color/white"
         android:progressTint="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/rv_now_playing_fragment"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
